--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-{"title": "test", "taskEndDate": "4-1-2020"},{"title": "test", "taskEndDate": "4-1-2020"},{"title": "test", "taskEndDate": "4-1-2020"},
+{"1": {"title": "task1"}, "2": {"title": "task2"}, "3": {"title": "task3"}, "4": {"title": "task4"}}
